# Riposte

./: .gitignore  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: deps.py  routers.py  sessions_router.py
backend/src/core/: audit_defaults.py  baseline.py  embeddings.py  fuzz_seeds.py  models.py  simulator.py  telemetry.py  text_analysis.py  truncate.py
backend/src/demos/: fixtures.py
backend/src/repositories/: vector_repo.py
backend/src/scenarios/: __init__.py  artifacts.py  base.py  browser_capture.py  registry.py  techniques.py
backend/src/scenarios/fixtures/: t1056_web_portal.html  t1078_admin.html  t1078_valid_accounts.html  t1115_clipboard.html  t1133_external_auth.html  t1185_session.html  t1189_driveby.html  (+5 more)
backend/src/services/: browserbase_client.py  eval_service.py  fuzzer_service.py  github_client.py  minimax_client.py  orchestrator.py  remediation_engine.py  repair_validation.py  scenario_mutation.py  verification_service.py
backend/src/workers/: eval_worker.py  fuzz_worker.py  offensive_worker.py  patch_worker.py  scenario_plan_worker.py  verification_worker.py
backend/tests/: conftest.py  sample_corpora.py  test_api.py  test_audit_defaults.py  test_baseline.py  test_browser_capture.py  test_embeddings.py  test_eval_service.py  test_fuzz_seeds.py  test_fuzzer_service.py  test_minimax_client.py  test_orchestrator.py  test_remediation_runner.py  test_scenarios.py  test_vector_repo.py  test_verification_service.py  test_worker_resilience.py
(+62 files in other folders)
