[project]
name = "riposte-backend"
version = "1.0.0"
description = "Riposte — autonomous continuous red-team + remediation pipeline for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.13",
    "tenacity>=9.0",
    "openai>=1.54",
    "redis[hiredis]>=5.2",
    # --- sponsor integrations (optional at runtime; pipeline degrades gracefully) ---
    "stagehand>=0.4",
    "sentry-sdk>=2.18",
    "arize-otel>=0.7",
    "openinference-instrumentation-openai>=0.1",
    "spacy>=3.7",
    # Real 300-d GloVe vectors for the ARiES anomaly + leakage math (CPU, no torch).
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
phoenix = ["arize-phoenix-otel>=0.6"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow the spaCy model wheel to be referenced by direct URL.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = ["src/workers/offensive_worker.py", "src/core/telemetry.py"]
